[gd_scene load_steps=9 format=3 uid="uid://b7sbfr7a62c8c"]

[ext_resource type="PackedScene" uid="uid://chcmtwtia1s41" path="res://scenes/levels/base_level.tscn" id="1_2n1ga"]
[ext_resource type="FontFile" uid="uid://c5usytkhau5qg" path="res://assets/misc/Lilliput Steps.otf" id="2_6w71a"]
[ext_resource type="Script" path="res://scripts/levelScripts/level_19.gd" id="2_kkyht"]
[ext_resource type="StyleBox" uid="uid://pl7u85rxhfye" path="res://resources/new_style_box_flat_normal.tres" id="3_umb18"]
[ext_resource type="StyleBox" uid="uid://dirr82n77phow" path="res://resources/new_style_box_flat_hover.tres" id="4_w6q1m"]
[ext_resource type="StyleBox" uid="uid://cg54yh1dsa1xo" path="res://resources/new_style_box_flat_pressed.tres" id="5_bqsa8"]
[ext_resource type="StyleBox" uid="uid://b5mq8sf7g0a5r" path="res://resources/new_style_box_empty.tres" id="6_5yf5d"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_dtv40"]
bg_color = Color(0.0235294, 0.27451, 0, 1)
border_width_left = 8
border_width_top = 8
border_width_right = 8
border_width_bottom = 8
border_color = Color(0.0755101, 0.0755101, 0.0755101, 1)

[node name="Level_19" instance=ExtResource("1_2n1ga")]
script = ExtResource("2_kkyht")

[node name="Label" type="Label" parent="." index="0"]
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -646.0
offset_top = 30.0
offset_right = 646.0
offset_bottom = 197.0
grow_horizontal = 2
theme_override_fonts/font = ExtResource("2_6w71a")
theme_override_font_sizes/font_size = 50
theme_override_styles/normal = SubResource("StyleBoxFlat_dtv40")
text = "19) Qual o contrário do inverso?"
horizontal_alignment = 1
vertical_alignment = 1

[node name="Button1" type="Button" parent="." index="1"]
offset_left = 260.0
offset_top = 372.0
offset_right = 610.0
offset_bottom = 472.0
theme_override_fonts/font = ExtResource("2_6w71a")
theme_override_font_sizes/font_size = 40
theme_override_styles/normal = ExtResource("3_umb18")
theme_override_styles/hover = ExtResource("4_w6q1m")
theme_override_styles/pressed = ExtResource("5_bqsa8")
theme_override_styles/focus = ExtResource("6_5yf5d")
text = "Sim"

[node name="Button2" type="Button" parent="." index="2"]
offset_left = 720.0
offset_top = 372.0
offset_right = 1070.0
offset_bottom = 472.0
theme_override_fonts/font = ExtResource("2_6w71a")
theme_override_font_sizes/font_size = 40
theme_override_styles/normal = ExtResource("3_umb18")
theme_override_styles/hover = ExtResource("4_w6q1m")
theme_override_styles/pressed = ExtResource("5_bqsa8")
theme_override_styles/focus = ExtResource("6_5yf5d")
text = "Não"

[node name="Button3" type="Button" parent="." index="3"]
offset_left = 260.0
offset_top = 513.0
offset_right = 610.0
offset_bottom = 613.0
theme_override_fonts/font = ExtResource("2_6w71a")
theme_override_font_sizes/font_size = 40
theme_override_styles/normal = ExtResource("3_umb18")
theme_override_styles/hover = ExtResource("4_w6q1m")
theme_override_styles/pressed = ExtResource("5_bqsa8")
theme_override_styles/focus = ExtResource("6_5yf5d")
text = "miS"

[node name="Button4" type="Button" parent="." index="4"]
offset_left = 720.0
offset_top = 513.0
offset_right = 1070.0
offset_bottom = 613.0
theme_override_fonts/font = ExtResource("2_6w71a")
theme_override_font_sizes/font_size = 40
theme_override_styles/normal = ExtResource("3_umb18")
theme_override_styles/hover = ExtResource("4_w6q1m")
theme_override_styles/pressed = ExtResource("5_bqsa8")
theme_override_styles/focus = ExtResource("6_5yf5d")
text = "oãN"

[node name="Button5" type="Button" parent="." index="5"]
modulate = Color(1, 1, 1, 0)
offset_left = 1141.0
offset_top = 692.0
offset_right = 1286.0
offset_bottom = 733.0
theme_override_fonts/font = ExtResource("2_6w71a")
theme_override_font_sizes/font_size = 20
theme_override_styles/normal = ExtResource("3_umb18")
theme_override_styles/hover = ExtResource("4_w6q1m")
theme_override_styles/pressed = ExtResource("5_bqsa8")
theme_override_styles/focus = ExtResource("6_5yf5d")
text = "Continuar"

[connection signal="pressed" from="Button1" to="." method="_on_button_1_pressed"]
[connection signal="pressed" from="Button2" to="." method="_on_button_2_pressed"]
[connection signal="pressed" from="Button3" to="." method="_on_button_3_pressed"]
[connection signal="pressed" from="Button4" to="." method="_on_button_4_pressed"]
[connection signal="mouse_entered" from="Button5" to="." method="_on_button_5_mouse_entered"]
[connection signal="mouse_exited" from="Button5" to="." method="_on_button_5_mouse_exited"]
[connection signal="pressed" from="Button5" to="." method="_on_button_5_pressed"]
